--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Sahand-Edrisi.github.io",
+  "homepage": "https://Sahand-Edrisi.github.io/search-movies",
   "name": "search-box",
   "version": "0.1.0",
   "private": true,
